# weather-api

./: .gitignore  README.md  gemini.py  main.py  pyproject.toml  test_cgpt.py
analysis/: test.ipynb
utils/: api_utils.py
