[project]
name = "weather-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "path>=17.1.1",
    "requests>=2.32.4",
    "ruff>=0.12.7",
    "streamlit>=1.47.1",
]
